# half-stack

./: .gitignore  .gitmodules  docker-compose.yml  logs.json  package-lock.json
capture-server/: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Jenkinsfile  Makefile  run.sh  server_build.sh
capture-server/365/: event_2024-07-23_11-39-13.021835.json  event_2024-07-23_11-39-14.736541.json  event_2024-07-23_11-39-21.511043.json  event_2024-07-23_11-39-27.02219.json  event_2024-07-23_11-39-32.833115.json  event_2024-07-23_11-39-45.497469.json  event_2024-07-23_11-39-49.222124.json  event_2024-07-23_11-39-58.152086.json
capture-server/Client/: README.md  angular.json  package.json  tsconfig.json
capture-server/Client/HTML/: Attendance.html  Employee.html  Holidays.html  Leave.html  Master.html  Payroll Attendance.html  Payroll Base.html  Payroll Calculated.html  Payroll.html  Privilige.html  Salary Slip.html  addAtt.html  addEmp.html  addHoli.html  addLeave.html  addPatt.html  addPayroll.html  addPbase.html  addPcal.html  addPriv.html  addSalarySlip.html  check.html  extra.html
capture-server/Client/assets/css/: style.css
capture-server/Client/assets/js/: api.js
capture-server/Client/src/: index.html  main.ts  styles.scss
capture-server/Client/src/@SCSS/: table.scss  toggle-switch.scss
capture-server/Client/src/@core/: common.module.ts  core.module.ts
capture-server/Client/src/@core/animations/: core.animation.ts
capture-server/Client/src/@core/components/: index.ts
capture-server/Client/src/@core/components/card-snippet/: card-snippet.component.html  card-snippet.component.scss  (+2 more)
capture-server/Client/src/@core/directives/: directives.ts
capture-server/Client/src/@core/pipes/: filter.pipe.ts  initials.pipe.ts  pipes.module.ts  safe.pipe.ts  stripHtml.pipe.ts
capture-server/Client/src/@core/scss/: core.scss
capture-server/Client/src/@core/services/: config.service.ts  loading-screen.service.ts  media.service.ts  translation.service.ts
capture-server/Client/src/@core/types/: core-config.ts  core-menu.ts  index.ts
capture-server/Client/src/app/: app-routing.module.ts  app.component.html  app.component.scss  app.component.ts  app.module.ts
capture-server/Client/src/app/blocks/: actions.ts  blocks.module.ts  checkable.ts  collection-item.ts  collection.spec.ts  collection.ts  event-dispatcher.ts
capture-server/Client/src/app/init/: keycloak-init.factory.ts
capture-server/Client/src/app/model-service/: attendance-model.ts  configuration-model.ts  employee-model.ts  holiday-model.ts  leave-model.ts  meta-type-builder.ts  meta-type.ts  model-base.ts  model-service.service.ts  monthly-attendance-model.ts  monthly-salary-model.ts  payroll-attendance-modal.ts  payroll-calculated-model.ts  payroll-employee-model.ts  payroll-interface.ts  payroll-model.ts  privilege-model.ts  salary-model.ts  salary-rate-model.ts  sick-leave-model.ts
capture-server/Client/src/app/page-not-found/: page-not-found.component.html
capture-server/Client/src/app/payroll/: action-host.directive.spec.ts  action-host.directive.ts  adapter.service.ts
capture-server/Client/src/environments/: environment.prod.ts  environment.ts
capture-server/api/: CMakeLists.txt  server.cpp  serverwin32.cpp
capture-server/api-client/: CMakeLists.txt  client-factory.cpp  client-factory.h  client.h
capture-server/certs/: cert-payroll.pem  certs.tar  priv-key-payroll.pem  pub-key-payroll.pem
capture-server/cmake/: AddSubmodule.cmake
capture-server/data-analytics/: CMakeLists.txt  json-driver.cpp  json-driver.h  tag-json.cpp  tag-json.h
capture-server/data-analytics/10/: event_2024-06-30_15-18-15.json  event_2024-06-30_20-19-15.json
capture-server/mioal/: CMakeLists.txt  minio-bridge.cpp  minio-bridge.h  vcpkg.json
capture-server/omal/: CMakeLists.txt  api-client.cpp  api-client.h  network-quality-assessment.h  omal-exceptions.cpp  omal-exceptions.h  omal-factory.cpp  omal-factory.h  output-profile.cpp  output-profile.h  virtual-app.cpp  virtual-app.h  virtual-host-conf.h  virtual-host-data.h  virtual-host.cpp  virtual-host.h  watcher.cpp  watcher.h
capture-server/pg-dal/: CMakeLists.txt  api.http  connection.cpp  connection.h  data-set.cpp  data-set.h  db-exceptions.cpp  db-exceptions.h  db-manager.cpp  db-manager.h  jsonresult.cpp  jsonresult.h  model.cpp  model.h  pg-task.cpp  pg-task.h  pgresult.cpp  pgresult.h  sqlerror.cpp  sqlerror.h  sqlhelper.h  stringutils.cpp  stringutils.h  transaction.cpp  transaction.h
capture-server/query-engine/: CMakeLists.txt  fnv-1a.cpp  fnv-1a.h  hls-video.cpp  hls-video.h  m3u8.cpp  m3u8.h  main.cpp  segment.cpp  segment.h  timestamp.cpp  timestamp.h
capture-server/rest-client/: CMakeLists.txt  client-factory.cpp  client-factory.h  client.cpp  client.h
capture-server/src/: CMakeLists.txt  base.cpp  base.h  coach.cpp  coach.h  config.cpp  config.h  connection-detail.cpp  connection-detail.h  connection.cpp  connection.h  countdown.cpp  countdown.h  datetimeutils.h  device.cpp  device.h  distribution-list.cpp  distribution-list.h  distributions.cpp  distributions.h  employee.cpp  employee.h  entity-base.cpp  entity-base.h  event-connection.cpp  event-connection.h  event-device.cpp  event-device.h  event-manager.cpp  event-manager.h  event-preview.cpp  event-preview.h  event-runner.cpp  event-runner.h  event.cpp  event.h  filesysutils.cpp  filesysutils.h  gateway.cpp  gateway.h  (+48 more)
capture-server/src/10/: event_2024-06-30_15-18-15.json  event_2024-06-30_18-18-15.json  event_2024-06-30_18-25-15.12.json  event_2024-06-30_18-25-15.json  event_2024-06-30_18-27-15.json  event_2024-06-30_18-28-15.json  event_2024-06-30_20-18-15.json  event_2024-06-30_20-19-15.json  event_2024-06-30_20-20-15.json
capture-server/tests/: CMakeLists.txt  sqldatabasetests.cpp  sqlhelpertests.cpp  sqlhelpertests1.cpp  test1.cpp  test2.cpp  test3.cpp  test4.cpp  test5.cpp
capture-server/zmq/: CMakeLists.txt  publisher.cpp  publisher.h  subscriber.cpp  subscriber.h
html_log/: CMakeLists.txt  Dockerfile  logs.json  test.html
html_log/src/: main.cpp
(+1443 files in other folders)
